--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</main>
       <footer>
 		<p>&copy; 2023 book store.org.<br>
-            <img src="https://i.pinimg.com/736x/d4/2a/9b/d42a9bd7d283e658e75f0cb03413fbd8.jpg" alt="book store" width="1.5%">
+            <img src="C:\Users\thanu\OneDrive\Documents\bookstore\images" alt="book store" width="1.5%">
             <a href="https://www.instagram.com/arul_sai_lucifer/"><FONT color="white">INSTAGRAM</a><br>
             <img src="https://th.bing.com/th/id/OIP.hh4wt5PavRp4kRkwFkj3ugHaHa?w=169&h=180&c=7&r=0&o=5&pid=1.7" alt="book store" width="1.5%">
             <a href="https://www.facebook.com/arul.sai.121"><FONT color="white">FACEBOOK</a>
