--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			font-family: 'TIMES NEW ROMAN',times new roman ;
 			margin: 0;
 			padding: 0;
-                   background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("store.jpg");
+                   background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("C:\Users\thanu\OneDrive\Documents\bookstore\images\store.jpg");
                   background-size: cover;
                   color:white;
 		}
