--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<div class="container">
 			<h2><font color="orange">Welcome to our Bookstore</h2>
 			<p><font color="white">Discover a world of knowledge and imagination at our bookstore. We offer a wide range of books, journals, and multimedia materials. Our friendly and knowledgeable staff is ready to assist you with your reading interests and inquiries.</p>
-			<a href="SignIn.html" class="btn">SignIn</a>
+			<a href="C:\Users\thanu\OneDrive\Documents\bookstore\pages" class="btn">SignIn</a>
 			<a href="login.html" class="btn">Login</a>
 		</div>
 	</main>
